# pytest-copier

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  release.yml
src/pytest_copier/: __init__.py  _version.py  errors.py  plugin.py
tests/: test_pytest_copier.py
